--- a/vignettes/courseraFarsR.Rmd
+++ b/vignettes/courseraFarsR.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "courseraFarsR"
+title: "Introdruction to courseraFarsR"
 output: rmarkdown::html_vignette
 description: >
   This vignette should grant you a smooth start into
@@ -10,7 +10,12 @@ vignette: >
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
-Testing vignette wrting
+## Disclaimer
+*This is a purely educational and private project. Just set to public to interact with [travis ci](https://travis-ci.org) and give those peer reviewers at coursera a chance to peek.*
+
+## Overview
+The package at hand provides you with some handy functions for handling data delivered by the
+[Fatality Analysis Reporting System](https://www.nhtsa.gov/research-data/fatality-analysis-reporting-system-fars) (FARS). The main purpose of the package is to import the FARS data in a tidy format and help the user plotting and summarizing the data for certain years. The key function is `fars_map_state()` which enables you to map accident data for a given state number and year.
 
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
@@ -19,6 +24,33 @@ knitr::opts_chunk$set(
 )
 ```
 
-```{r setup}
+`fars_read()` provides you with a reader function for the compress FARS csv data. It produces a tidy tibble, as an example the 2013 data (`accident_2013.csv.bz2`) have been read in:
+
+### Importing Data: accident_2013.csv.bz2
+```{r read_in}
 library(courseraFarsR)
+fars_read(system.file("extdata", "accident_2013.csv.bz2", package = "courseraFarsR"))
 ```
+
+### Helpers: construct filename and read multiple years
+The respective filename for a certain year's data according to the FARS standard can be generated with the function `make_filename()`:
+```{r make_filename}
+make_filename(2013)
+```
+
+For the purpose of summarizing the information later on, multiple years can be imported in the following way as month-year combinations. The function returns a list object each element being a tibble of month:
+```{r fars_read_years}
+fars_read_years(c(2013, 2015))
+```
+
+### Compute summary and map data
+Those combinations can also be directly summarized with the help of the `make_filename()` function. This gives you the possibility to compare the monthly accident counts of multiple years:
+```{r fars_summarize_years}
+fars_summarize_years(c(2013, 2015))
+```
+
+The package's main function `fars_map_state()` makes use of the helper functions above map the accident data for a given state number and a given year:
+```{r plot}
+fars_map_state(1, 2014)
+```
+
